--- a/passwordforget.html
+++ b/passwordforget.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Forgot Password</title>
+    <title>Şifremi Unuttum</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
 </head>
@@ -11,7 +11,7 @@
 <section>
     <div class="login-box">
         <form id="passwordforgotForm">
-            <h2 id="passwordforgot">Forgot Password</h2>
+            <h2 id="passwordforgot">Şifremi Unuttum</h2>
 
             <div class="input-box">
                 <span class="icon"><ion-icon name="mail"></ion-icon></span>
@@ -20,18 +20,11 @@
             </div>
 
             <div class="remember-forget">
-                <span id="rememberpasswordtext">Remember your password?</span>
-                <a href="index.html" id="orlogin">Or login</a>
+                <span id="rememberpasswordtext">Şifrenimi hatırladın?</span>
+                <a href="login.html" id="orlogin">Giriş Yap</a>
             </div>
 
-            <button type="submit" id="sendemailtext">Send Email</button>
-
-            
-
-            <select id="languageSelect">
-                <option value="tr">Türkçe</option>
-                <option value="en">English</option>
-            </select>
+            <button type="submit" id="sendemailtext">Email Gönder</button>
         </form>
     </div>
 </section>
@@ -40,6 +33,21 @@
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 <script type="module" src="main.js"></script>
 <script>
+    const bodyEl = document.querySelector('body');
+const moonIcon = document.getElementById("fa-moon");
+
+// Sayfa yüklendiğinde localStorage kontrolü
+if(localStorage.getItem('darkMode') === 'true') {
+    bodyEl.classList.add('dark');
+}
+
+// Dark mode toggle
+moonIcon.addEventListener('click', () => {
+    bodyEl.classList.toggle('dark');
+    // durumu kaydet
+    localStorage.setItem('darkMode', bodyEl.classList.contains('dark'));
+});
+
 </script>
 </body>
 </html>
