--- a/register.html
+++ b/register.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Register</title>
+    <title>Kayıt Olmak</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 <section>
     <div class="login-box">
         <form id="registerForm">
-            <h2 id="toptextregister">Register</h2>
+            <h2 id="toptextregister">Kayıt Ol</h2>
 
             <div class="input-box">
                 <span class="icon"><ion-icon name="person"></ion-icon></span>
                 <input type="text" required placeholder=" " id="username">
-                <label id="username">Username</label>
+                <label id="username">Kullanıcı Adı</label>
             </div>
 
             <div class="input-box">
@@ -28,28 +29,22 @@
             <div class="input-box">
                 <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
                 <input type="password" required placeholder=" " id="password">
-                <label id="passwordtext">Password</label>
+                <label id="passwordtext">Şifre</label>
             </div>
 
             <div class="input-box">
                 <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
                 <input type="password" required placeholder=" " id="passwordagain">
-                <label id="passwordagaintext">Password Again</label>
+                <label id="passwordagaintext">Şifre Tekrar</label>
             </div>
 
             <div class="remember-forget">
-                <span id="youhaveaccount">You have an account?</span>
-                <a href="index.html" id="orlogin">Or login</a>
+                <span id="youhaveaccount">Zaten bir hesabın varmı?</span>
+                <a href="login.html" id="orlogin">Giriş Yap</a>
             </div>
 
-            <button type="submit" id="registerbutton">Register</button>
-
+            <button type="submit" id="registerbutton">Kayıt Ol</button>
             
-
-            <select id="languageSelect">
-                <option value="tr">Türkçe</option>
-                <option value="en">English</option>
-            </select>
         </form>
     </div>
 </section>
@@ -57,5 +52,22 @@
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 <script type="module" src="main.js"></script>
+<script>
+       const bodyEl = document.querySelector('body');
+const moonIcon = document.getElementById("fa-moon");
+
+// Sayfa yüklendiğinde localStorage kontrolü
+if(localStorage.getItem('darkMode') === 'true') {
+    bodyEl.classList.add('dark');
+}
+
+// Dark mode toggle
+moonIcon.addEventListener('click', () => {
+    bodyEl.classList.toggle('dark');
+    // durumu kaydet
+    localStorage.setItem('darkMode', bodyEl.classList.contains('dark'));
+});
+
+    </script>
 </body>
 </html>
