--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='prepage.css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body class="dark">
+<body>
     <section>
         
     </section>
@@ -16,7 +16,7 @@
     <header>
         <div class="container">
             <div class="navbar">
-                <div class="logo-text">
+                <div id="logo-text" class="logo-text">
                     <h2>Arda Çelik Kapı</h2>
                 </div>
                 <nav>
