--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='prepage.css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body class="dark">
+<body>
     <section>
         
     </section>
@@ -55,6 +55,13 @@
         </div>
     </main>
     <!--Showcase Close-->
+
+    <footer>
+    <div class="container">
+        <p>© 2025 Arda Çelik Kapı | Tüm hakları saklıdır.</p>
+        <p>Bu web sitesi <a href="https://spaceship.com" target="_blank">SpaceShip</a> üzerinden alınan alan adı ile yayınlanmaktadır.</p>
+    </div>
+    </footer>
 
 
 
