--- a/menu.html
+++ b/menu.html
@@ -23,8 +23,14 @@
                     <ul>
                         <li><a href="#">Sepetim</a></li>
                         <li><a href="contact.html">İletişim</a></li>
+                        <li><a href="menu.html">Ana Sayfa</a></li>
                         <li><a href="#">Hesap Ayarları</a></li>
                         <li id="usernameDisplay"></li>
+                        <div class="below_content">
+                        <div class="dark-mode">
+                            <i id="fa-moon" class="fa-solid fa-moon"></i>
+                        </div>
+                </div>
                     </ul>
                 </nav>
             </div>
@@ -45,12 +51,7 @@
                     <img src="Images/welcome.gif" alt="">
                 </div>
 
-                <!--down side-->
-                <div class="below_content">
-                    <div class="dark-mode">
-                        <i id="fa-moon" class="fa-solid fa-moon"></i>
-                    </div>
-                </div>
+                
             </div>
         </div>
     </main>
