--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="contact.html">İletişim</a></li>
                         <li><a href="login.html">Giriş Yap</a></li>
                         <li><a href="register.html">Kayıt Ol</a></li>
                         <!--down side-->
@@ -43,7 +42,7 @@
         <div class="showcase">
             <div class="left_side_content">
                 <h2>Hakkımızda</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, iste harum dolores aspernatur sint, quod totam, perspiciatis velit ipsa quasi inventore ducimus architecto enim eaque est expedita molestias accusantium veniam?</p>
+                <p>Arda Çelik Kapı, Zonguldak şehrinin Ereğli ilçesinde yürürlülük gösteren bir çelik kapı dükkanıdır. Bu siteden sattığımız kapılara göz atabilirsiniz ve eğer beğenirseniz bizimle iletişime geçerek istediğiniz kapıyı satın alabilirsiniz. Site 2025 yılında kurulup yürürlülüğe başlamıştır. Alttaki daha fazla bilgi butonuna basarak kapılar hakkında bilgi sahibi olabilirsiniz ve giriş yaparak sitemizde tam gezinme yetkisine sahip olabilirsiniz.</p>
                 
                 <!-- Buton -->
                 <button type="button" id="moreInfoBtn">Daha fazla bilgi...</button>
