--- a/contact.html
+++ b/contact.html
@@ -21,11 +21,10 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="#">Sepetim</a></li>
                         <li><a href="contact.html">İletişim</a></li>
                         <li><a href="menu.html">Ana Sayfa</a></li>
-                        <li><a href="#">Hesap Ayarları</a></li>
-                        <li id="usernameDisplay"></li>
+                        <li><a href="accountsettings.html">Hesap Ayarları</a></li>
+                        <li id="usernameDisplay">Kullanici</li>
                         <div class="below_content">
                         <div class="dark-mode">
                             <i id="fa-moon" class="fa-solid fa-moon"></i>
