--- a/accountsettings.html
+++ b/accountsettings.html
@@ -40,8 +40,8 @@
                 <label for="username">Kullanıcı Adı:</label>
                 <input type="text" id="username" placeholder="Yeni kullanıcı adı">
 
-                <label for="email">E-posta:</label>
-                <input type="email" id="email" placeholder="Yeni e-posta">
+                <label for="email">Yeni Şifre:</label>
+                <input type="password" id="password" placeholder="Yeni Şifre">
 
 
                 <button id="updateBtn">Güncelle</button>
