--- a/accountsettings.html
+++ b/accountsettings.html
@@ -40,6 +40,9 @@
                 <label for="username">Kullanıcı Adı:</label>
                 <input type="text" id="username" placeholder="Yeni kullanıcı adı">
 
+                <label for="email">E-posta:</label>
+                <input type="email" id="email" placeholder="Yeni e-posta">
+
                 <label for="email">Yeni Şifre:</label>
                 <input type="password" id="password" placeholder="Yeni Şifre">
 
