--- a/menu.html
+++ b/menu.html
@@ -44,7 +44,7 @@
                 <div class="left_side_content">
                     <h2>Hoşgeldin <span id="showUsername">Kullanıcı</span></h2>
                     <p>Artık kapıların dünyasına giriş yaptığına göre birbirinden güzel, birbirinden çeşitli kapılara bakmaya hazır ol! alttaki butona basarak kapılarımıza göz atabilirsin.</p>
-                    <button type="button" onclick="">Kapılara Göz At...</button>
+                    <button type="button" onclick="window.location.href = 'doors.html'">Kapılara Göz At...</button>
                 </div>
                 <div class="right_side_content">
                     <img src="Images/welcome.gif" alt="">
@@ -125,7 +125,6 @@ moonIcon.addEventListener('click', () => {
         // window.location.href = "index.html";
     }
 });
-
     </script>
     
 </body>
